tests/errors/test_40.x
// Unknown type

fn main() -> void {

    let x: WHAT;

}